--- a/doc/html-templates/css/bootstrap.css
+++ b/doc/html-templates/css/bootstrap.css
@@ -2689,7 +2689,7 @@ input[type="submit"].btn.btn-mini {
   clear: both;
 }
 .tab-content {
-  display: block;
+  display: table;
   width: 100%;
 }
 .tabs-below .nav-tabs,
@@ -2699,7 +2699,7 @@ input[type="submit"].btn.btn-mini {
 }
 .tab-content > .tab-pane,
 .pill-content > .pill-pane {
-  display: block;
+  display: none;
 }
 .tab-content > .active,
 .pill-content > .active {
